--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "sass": "^1.43.4"
+  },
+  "scripts": {
+    "watch-sass":"sass --watch sass/main.scss:css/main.css" 
   }
 }
